@@ -1,3 +1,12 @@
+2007-04-26  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf.h,
+	* gameswf/gameswf_action.cpp,
+	* gameswf/gameswf_as_classes/as_sound.cpp,
+	fixed stopAllSounds() & setVolume()
+	* gameswf/gameswf_environment.*
+	* gameswf/gameswf_impl.*: added loadMovie("my.jpg", ...)
+	
 2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_as_classes/as_color.cpp: added getTransform() & setTransform()
